# MachineLearning

./: CIFAR-10  Cat_Dog  ClassificationMLModels  Clustering  HouseSalePrice  ImageProcessing.ipynb  ImageProcessing_SkinCancer  Iris_Classification.ipynb  MNIST_Classifier  Ml_1.ipynb  Ovarian_Cancer  openCV_imageprocessing.ipynb  pyproject.toml
Colab Notebooks/: LinearRegression.ipynb  python-01.ipynb  python-imageProcessing.ipynb  python-pandas(1).ipynb  python-pandas.ipynb  pythonNumpy.ipynb
HousePricePrediction/: .gitignore  Housing.ipynb  housing-price-prediction.ipynb  pyproject.toml
ImageProcessingCourse/: RishabhMittal_SoftwareDeveloper.docx
MachineLearning/: ML_1.ipynb  ML_2.ipynb  ML_3.ipynb  ML_4.ipynb  ML_5.ipynb  ML_6.ipynb  ML_K-NN.ipynb  ML_Logistic_Regression.ipynb
Machinelearning/: ML_6.ipynb
basics/: numpy.ipynb
ovarian_biomarker_cancer_prediction/: pyproject.toml
