[tool.poetry]
name = "machinelearning"
version = "0.1.0"
description = "Machine learning"
authors = ["therishabhmittal05 <rishabhmittal928@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
