[tool.poetry]
name = "ovarian-biomarker-cancer-prediction"
version = "0.1.0"
description = ""
authors = ["therishabhmittal05 <rishabhmittal928@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
matplotlib = "^3.9.2"
numpy = "^2.1.1"
pandas = "^2.2.2"
scipy = "^1.14.1"
scikit-learn = "^1.5.1"
seaborn = "^0.13.2"
openpyxl = "^3.1.5"
xgboost = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
